Fix Overflow Highlight Code

--- a/resources/css/bodyContent.css
+++ b/resources/css/bodyContent.css
@@ -188,6 +188,7 @@
 #body pre {
     padding: 10px;
     border-radius: 5px;
+    overflow-x: auto !important;
 }
 #body pre > div > span:first-child {
     display: none;
